# utech-wfh-analyzer

./: .gitignore  Derivation_Aggregate_Solver_Slope.md  README.md  WFH_Perturbation_Module_Specification.md  pipeline_walkthrough.jsx  pyproject.toml
docs/: WFH_Perturbation_Framework_Test.xlsx  visualization_tool_spec.md
examples/: hex_pipeline_example.py
scripts/: precompute_viz_data.py
tests/: test_integration.py  test_validation.py
viz/: .env.example  app.jsx  index.html  package-lock.json  package.json  vite.config.js
wfh_perturbation/: __init__.py  cache.py  computation.py  config.py  data_acquisition.py  fips.py  geo.py  solver.py  spatial.py  types.py
wfh_perturbation/config/: b15003_crosswalk.json  default_params.json  industry_mapping.json
