[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wfh-perturbation"
version = "0.1.0"
description = "Post-generation WFH behavioral perturbation framework for the uTECH-Cities project"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "John Meluso", email = "johnameluso@gmail.com"},
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "requests>=2.28",
    "geopandas>=0.13",
    "h3>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["wfh_perturbation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
